# my_agents

./: .gitignore  pyproject.toml
foundations/: foundations1.ipynb  foundations2.ipynb  foundations3.ipynb
