[project]
name = "my-agents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "gradio==6.1.0",
    "ipykernel>=7.1.0",
    "ipywidgets==8.1.8",
    "openai==2.12.0",
    "pypdf>=6.4.2",
    "python-dotenv>=1.2.1",
]
